changed canvas size

--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -21,7 +21,8 @@
     <style>
         #wrapper {
             text-align: center;
-            padding-top: 100px;
+            padding: 40px 0px;
+            padding-bottom: 105px;
         }
 
         #music-container {
@@ -36,60 +37,63 @@
         #controls div {
             margin-top: 5px;
         }
+        #defaultCanvas {
+          width: 50%;
+        }
     </style>
 </head>
 
 <body>
     <div id="loader"></div>
     <div class="content-wrapper music-visualizer portfolio-page">
-      <div class="navigation">
-          <ul>
-              <li>
-                  <a href="../index.html"><img src="../assets/logo.svg"></a>
-                  </img>
-              </li>
-              <li class="link"><a href="../index.html#work-section">Work</a></li>
-              <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
-          </ul>
-      </div>
-      <div class="content">
-          <div class="portfolio-header">
-              <div class="hidden-header">
-                  <div class="text-wrapper">
-                      <p class="type">Design & Development</p>
-                      <h1>Music Visualizer</h1>
-                  </div>
-                  <div class="image-wrapper">
-                      <img src="images/music-visualizer-main.jpg"></img>
-                  </div>
-              </div>
-          </div>
-          <div class="section info-section text-section hideme">
-              <div class="info-wrapper">
-                  <div class="sub-section">
-                      <h2>Type Of Work</h2>
-                      <p>P5.js Development</p>
-                  </div>
-                  <div class="sub-section">
-                      <h2>Context</h2>
-                      <p>Music Visualizer built with P5.js</p>
-                  </div>
-                  <div class="sub-section">
-                      <h2>Year</h2>
-                      <p>2015</p>
-                  </div>
-              </div>
-          </div>
+        <div class="navigation">
+            <ul>
+                <li>
+                    <a href="../index.html"><img src="../assets/logo.svg"></a>
+                    </img>
+                </li>
+                <li class="link"><a href="../index.html#work-section">Work</a></li>
+                <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="portfolio-header">
+                <div class="hidden-header">
+                    <div class="text-wrapper">
+                        <p class="type">Design & Development</p>
+                        <h1>Music Visualizer</h1>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="images/music-visualizer-main.jpg"></img>
+                    </div>
+                </div>
+            </div>
+            <div class="section info-section text-section hideme">
+                <div class="info-wrapper">
+                    <div class="sub-section">
+                        <h2>Type Of Work</h2>
+                        <p>P5.js Development</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Context</h2>
+                        <p>Music Visualizer built with P5.js</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Year</h2>
+                        <p>2015</p>
+                    </div>
+                </div>
+            </div>
 
-          <div class="section text-section hideme">
-              <div class="bg">
-                  <div class="text-wrapper">
-                      <p>This is a music visualizer that I created using a javascript libary called p5. Using the P5 sound libary I was able to choose a sampling of frequencies that I then mapped to each line. The length of each line corresponds to the amplitude
-                          of each frequency. The distance that the dot at the end of the line travels corresponds to the overall amplitude of the music. Press play and mess around with the sliders and invert button! </p>
-                  </div>
-              </div>
+            <div class="section text-section hideme">
+                <div class="bg">
+                    <div class="text-wrapper">
+                        <p>This is a music visualizer that I created using a javascript libary called p5. Using the P5 sound libary I was able to choose a sampling of frequencies that I then mapped to each line. The length of each line corresponds to the
+                            amplitude of each frequency. The distance that the dot at the end of the line travels corresponds to the overall amplitude of the music. Press play and mess around with the sliders and invert button! </p>
+                    </div>
+                </div>
 
-          </div>
+            </div>
 
 
 
