--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -37,9 +37,11 @@
         #controls div {
             margin-top: 5px;
         }
-        #defaultCanvas {
-          width: 50%;
+        canvas {
+          width: 50% !important;
+          display: none;
         }
+
     </style>
 </head>
 
