adding height auto

--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -37,11 +37,11 @@
         #controls div {
             margin-top: 5px;
         }
-        canvas {
-          width: 50% !important;
-          display: none;
-        }
 
+        #defaultCanvas {
+            width: 90% !important;
+            height: auto !important;
+        }
     </style>
 </head>
 
