--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -40,6 +40,7 @@
 
         #defaultCanvas {
             width: 90% !important;
+            max-width: 600px !important;
             height: auto !important;
         }
     </style>
