added hideme to homepage

--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -30,7 +30,7 @@
         }
 
         #controls {
-            padding-left: 15px;
+            padding: 15px;
             display: inline-block;
         }
 
