--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="about-section">
-                <div class="text-wrapper">
+                <div class="hideme text-wrapper">
                     <div class="title-wrapper">
                         <h2>Hello,</h2></div>
                     <p>I'm Sabrina Kantor, a Designer and Developer living in Boston. I am currently pursuing a degree in Computer Science and Interactive media at Northeastern University. I am passionate about exploring the intersection of art, design and
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div id="work-section" class="portfolio">
+            <div id="work-section" class="hideme portfolio">
 
 
                 <div id="zealery" class="project portfolio-item">
