--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -28,7 +28,7 @@
                   <div class="hidden-header">
                 <div class="text-wrapper">
                     <p class="type">Design & Development</p>
-                    <h1>Deschutes River </br> Country Guide</h1>
+                    <h1>Deschutes River Country Guide</h1>
                     <a href="https://central-or.com">
                         <div class="button">View the Site</div>
                     </a>
