--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 </div>
             </div>
 
-            <div id="work-section" class="hideme portfolio">
+            <div id="work-section" class="portfolio">
 
 
-                <div id="zealery" class="project portfolio-item">
+                <div id="zealery" class="project hideme portfolio-item">
                     <a href="work/zealery.html">
 
                         <div class="portfolio-item-text">
@@ -80,7 +80,7 @@
 
                     </a>
                 </div>
-                <div id="deschutes" class="project portfolio-item">
+                <div id="deschutes" class="project hideme portfolio-item">
                     <a href="work/deschutes-river-guide.html">
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
@@ -97,7 +97,7 @@
                         < </a>
                 </div>
 
-                <div id="graphic-design" class="project portfolio-item">
+                <div id="graphic-design" class="project hideme portfolio-item">
                     <a href="work/graphic-design.html">
                         <div class="portfolio-item-text">
                             <p>Design</p>
@@ -112,7 +112,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="music-visualizer" class="project portfolio-item">
+                <div id="music-visualizer" class="project hideme portfolio-item">
                     <a href="work/music-visualizer.html">
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
@@ -128,7 +128,7 @@
 
                     </a>
                 </div>
-                <div id="macro" class="project portfolio-item">
+                <div id="macro" class="project hideme  portfolio-item">
                     <a href="work/macro-market.html">
                         <div class="portfolio-item-text">
                             <p>Development</p>
