--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="right">
                     <div class="header-image-wrapper">
-                        <img class="header-image" src="assets/sabrina_compressed.png"></img>
+                        <img id="header-image"class="header-image" src="assets/sabrina_compressed.png"></img>
                     </div>
                     <div class="color-block"></div>
                 </div>
