changed font to fira sans

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,500,600,700|Fira+Sans:300,400,600" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 
@@ -20,7 +18,7 @@
                     </img>
                 </li>
                 <li id="work-link" class="link">Work</li>
-                  <li class="link"><a href="assets/resume.pdf">Resume</a></li>
+                <li class="link"><a href="assets/resume.pdf">Resume</a></li>
             </ul>
         </div>
         <div class="content">
@@ -28,16 +26,16 @@
                 <div class="outline"></div>
                 <div class="text-wrapper">
                     <div class="text">
-                        <h1>Sabrina</h1><h1>Kantor</h1>
+                        <img id="name-image" src="assets/name.svg"></img>
                     </div>
                 </div>
                 <div class="sub-text-wrapper">
-                    <div class="text"><h2>Designer</h2><h2>&</h2><h2>Developer</h2>
+                    <div class="text"> <img id="title-image" src="assets/title.svg"></img>
                     </div>
                 </div>
                 <div class="right">
                     <div class="header-image-wrapper">
-                        <img id="header-image"class="header-image" src="assets/sabrina_compressed.png"></img>
+                        <img id="header-image" class="header-image" src="assets/sabrina_compressed.png"></img>
                     </div>
                     <div class="color-block"></div>
                 </div>
@@ -51,12 +49,22 @@
             <div class="about-section">
                 <div class="hideme text-wrapper">
                     <div class="title-wrapper">
-                        <h2>Hello,</h2></div>
+                        <h2>Hello</h2></div>
                     <p>I'm Sabrina Kantor, a Designer and Developer living in Boston. I am currently pursuing a degree in Computer Science and Interactive media at Northeastern University. I am passionate about exploring the intersection of art, design and
                         technology. Take a look at my work.</p>
-                        <div class="contact">
-                            <a href="mailto:kantor.sa@husky.neu.edu"><p>email</p></a><div class=line></div> <a href="https://www.linkedin.com/in/sabrina-kantor-610354b5/"><p>linkedin</p></a><div class=line></div><a href="https://github.com/kantors"><p>github</a></p>
-                        </div>
+                    <div class="contact">
+                        <a href="mailto:kantor.sa@husky.neu.edu">
+                            <p>email</p>
+                        </a>
+                        <div class=line></div>
+                        <a href="https://www.linkedin.com/in/sabrina-kantor-610354b5/">
+                            <p>linkedin</p>
+                        </a>
+                        <div class=line></div>
+                        <a href="https://github.com/kantors">
+                            <p>github</a>
+                        </p>
+                    </div>
                 </div>
             </div>
 
