--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -55,6 +55,7 @@
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
+                  <h1>About the Deschutes River Guide</h1>
                   <p>The Deschutes River Guide is short e-book that describes Central Oregon's history.
                     The site was designed to showcase the e-book as well as Central Oregon's beauty.
                     I began the development of the custom Wordpress theme by building off the starter theme, Underscores.
