--- a/work/macro-market.html
+++ b/work/macro-market.html
@@ -19,7 +19,7 @@
                     <a href="../index.html"><img src="../assets/logo.svg"></a>
                     </img>
                 </li>
-                <li class="link"><a href="work.html">Work</a></li>
+                <li class="link"><a href="../index.html#work-section">Work</a></li>
                 <li class="link">Resume</li>
             </ul>
         </div>
@@ -57,7 +57,8 @@
             <div class="section text-section hideme">
                 <div class="bg">
                     <div class="text-wrapper">
-                        <p>Macro Market is a web application I started the development on as an intern at Datawheel. The site allows companies to register and list themselves under the products and countries they import and export to. The site is currently
+                        <h1>About Macro Market</h1>
+                        <p>Macro Market is a web application I developed as an intern at Datawheel. The site allows companies to register and list themselves under the products and countries they import and export to. The site is currently
                             populated with seeder data as well as real companies from the Connect Americas API. I built the site using React, NodeJs and postgreSQL.
                         </p>
                     </div>
