--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -91,6 +91,7 @@
             <div class="section text-section hideme">
                 <div class="bg">
                     <div class="text-wrapper">
+                      <h1>About the Visualizer</h1>
                         <p>This is a music visualizer that I created using a javascript libary called p5. Using the P5 sound libary I was able to choose a sampling of frequencies that I then mapped to each line. The length of each line corresponds to the
                             amplitude of each frequency. The distance that the dot at the end of the line travels corresponds to the overall amplitude of the music. Press play and mess around with the sliders and invert button! </p>
                     </div>
