--- a/work/zealery.html
+++ b/work/zealery.html
@@ -57,10 +57,10 @@
             <div class="section text-section hideme">
                 <div class="bg">
                     <div class="text-wrapper">
+                        <h1>About Zealery</h1>
                         <p>Zealery is a social shopping app designed to give users the experience of shopping with friends. Users can see clothing recommendations, browse by style and view what clothing their friends have liked. It was important to our clients
                             that the app was a fun way users could get their friends opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
                         </p>
-
                         <!-- <p> We started off the project in a research and discovery phase where we worked closely with the client to define brand and audience. From there we began wireframing, first in paper and then eventually taking the designs into Balsamic.
                             As the rest of the team continued to iterate on our designs, I began development on the app. Our client came to us with an existing backend for the app using Ionic and powered by the ShopStyle API. I implemented my team's designs
                             on the Front End using AngluarJs.
