--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,500,600,700|Fira+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../main.js"></script>
-          <script src="../js/portfolio.js"></script>
+    <script src="../js/portfolio.js"></script>
 </head>
 
 <body>
@@ -25,17 +24,18 @@
         </div>
         <div class="content">
             <div class="portfolio-header">
-                  <div class="hidden-header">
-                <div class="text-wrapper">
-                    <p class="type">Design & Development</p>
-                    <h1>Deschutes River Country Guide</h1>
-                    <a href="https://central-or.com">
-                        <div class="button">View the Site</div>
-                    </a>
+                <div class="hidden-header">
+                    <div class="text-wrapper">
+                        <p class="type">Design & Development</p>
+                        <h1>Deschutes River Country Guide</h1>
+                        <a href="https://central-or.com">
+                            <div class="button">View the Site</div>
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="images/deschutes-main.png"></img>
+                    </div>
                 </div>
-                <div class="image-wrapper">
-                    <img src="images/deschutes-main.png"></img>
-                </div></div>
             </div>
             <div class="section info-section text-section hideme">
                 <div class="info-wrapper">
@@ -55,11 +55,10 @@
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
-                  <h1>About the Deschutes River Guide</h1>
-                  <p>The Deschutes River Guide is short e-book that describes Central Oregon's history.
-                    The site was designed to showcase the e-book as well as Central Oregon's beauty.
-                    I began the development of the custom Wordpress theme by building off the starter theme, Underscores.
-                   </p>
+                    <h1>About the Deschutes River Guide</h1>
+                    <p>The Deschutes River Guide is short e-book that describes Central Oregon's history. The site was designed to showcase the e-book as well as Central Oregon's beauty. I began the development of the custom Wordpress theme by building off
+                        the starter theme, Underscores.
+                    </p>
                 </div>
 
             </div>
