--- a/work/macro-market.html
+++ b/work/macro-market.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,500,600,700|Fira+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../main.js"></script>
     <script src="../js/portfolio.js"></script>
@@ -58,8 +58,8 @@
                 <div class="bg">
                     <div class="text-wrapper">
                         <h1>About Macro Market</h1>
-                        <p>Macro Market is a web application I developed as an intern at Datawheel. The site allows companies to register and list themselves under the products and countries they import and export to. The site is currently
-                            populated with seeder data as well as real companies from the Connect Americas API. I built the site using React, NodeJs and postgreSQL.
+                        <p>Macro Market is a web application I developed as an intern at Datawheel. The site allows companies to register and list themselves under the products and countries they import and export to. The site is currently populated with
+                            seeder data as well as real companies from the Connect Americas API. I built the site using React, NodeJs and postgreSQL.
                         </p>
                     </div>
                 </div>
