--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -2,27 +2,26 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,500,600,700|Fira+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
     <script src="../main.js"></script>
     <script src="../js/portfolio.js"></script>
 </head>
 
 <body>
     <div class="content-wrapper graphic-design portfolio-page">
-      <div class="navigation">
-          <ul>
-              <li>
-                  <a href="../index.html"><img src="../assets/logo.svg"></a>
-                  </img>
-              </li>
-              <li class="link"><a href="../index.html#work-section">Work</a></li>
-              <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
-          </ul>
-      </div>
+        <div class="navigation">
+            <ul>
+                <li>
+                    <a href="../index.html"><img src="../assets/logo.svg"></a>
+                    </img>
+                </li>
+                <li class="link"><a href="../index.html#work-section">Work</a></li>
+                <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
+            </ul>
+        </div>
         <div class="content">
             <div class="portfolio-header">
                 <div class="hidden-header">
