updated zealery page

--- a/work/zealery.html
+++ b/work/zealery.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,500,600,700|Fira+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../main.js"></script>
     <script src="../js/portfolio.js"></script>
