--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -53,7 +53,7 @@
             <div class="section text-section hideme">
                 <div class="bg">
                     <div class="text-wrapper">
-                        <h3>Hierarhy Compositions</h3>
+                        <h3>Hierarchy Compositions</h3>
                         <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and
                             photography of a body part. This was a 6 week project where each week, we added another element focusing on creating compositions where different elements read first.</p>
                     </div>
