--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
             <div class="about-section">
                 <div class="hideme text-wrapper">
                     <div class="title-wrapper">
-                        <h2>Hello</h2></div>
-                    <p>I'm Sabrina Kantor, a Designer and Developer living in Boston. I am currently pursuing a degree in Computer Science and Interactive media at Northeastern University. I am passionate about exploring the intersection of art, design and
-                        technology. Take a look at my work.</p>
+                        <div class="line"></div>
+                        <h2>Hello. I am a Designer and Developer living in Boston.</h2></div>
+                    <p> I am currently pursuing a degree in Computer Science and Interactive Media at Northeastern University while also managing a team of interdisciplinary students as the Labs Director at Scout Studio. I am passionate about exploring the intersection of art, design and technology. Check
+                        out some of my work.</p>
                     <div class="contact">
                         <a href="mailto:kantor.sa@husky.neu.edu">
                             <p>email</p>
@@ -158,7 +159,8 @@
             </div>
         </div>
         <div class="footer">
-
+          <p>email</p>
+          <p> kantor.sa@husky.neu.edu</p>
         </div>
     </div>
 </body>
