--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="homd content-wrapper">
+    <div class="home content-wrapper">
         <div class="navigation">
             <ul>
                 <li>
