larger work boxes on homepage

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="title-wrapper">
                         <div class="line"></div>
                         <h2>Hello. I am a Designer and Developer living in Boston.</h2></div>
-                    <p> I am currently pursuing a degree in Computer Science and Interactive Media at Northeastern University while also managing a team of interdisciplinary students as the Labs Director at Scout Studio. I am passionate about exploring the intersection of art, design and technology. Check
+                    <p> I am currently pursuing a degree in Computer Science and Interactive Media at Northeastern University. I also manage a team of interdisciplinary students as the Labs Director at Scout Studio. I am passionate about exploring the intersection of art, design and technology. Check
                         out some of my work.</p>
                     <div class="contact">
                         <a href="mailto:kantor.sa@husky.neu.edu">
