added solutions pages

--- a/advancedwritting/solutions.html
+++ b/advancedwritting/solutions.html
@@ -26,16 +26,17 @@
                 <div class="solution">
                     <h2>Beginner</h2>
                     <ul>
-                        <li>1.Private Browsing (Safari) or Icognito Mode (Chrome)</li>
-                        <li>2.Log out of social media when you’re browsing the web</li>
-                        <li>3.Change your smart phones's privacy settings</li>
+                        <a href="solutions/beginner-1.html"><li>Private Browsing (Safari) or Icognito Mode (Chrome)</li></a>
+                        <a href="solutions/beginner-2.html"><li>Log out of social media when you’re browsing the web</li></a>
+                        <a href="solutions/beginner-3.html"><li>Delete Cookies</li></a>
+                        <a href="solutions/beginner-4.html"><li>Change your smart phones's privacy settings</li></a>
                     </ul>
                 </div>
                 <div class="solution">
                     <h2>Intermediate</h2>
                     <ul>
-                        <li>1.Private Browsing (Safari) or Icognito Mode (Chrome)</li>
-                        <li>2.DuckDuckGo</li>
+                        <a href="solutions/intermediate-1.html"><li>Private Browsing (Safari) or Icognito Mode (Chrome)</li>
+                        <a href="solutions/intermediate-2.html"> <li>DuckDuckGo</li>
 
                     </ul>
                 </div>
