--- a/advancedwritting/index.html
+++ b/advancedwritting/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../advanced-writting.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 
@@ -13,25 +13,39 @@
     <div class="wrapper">
         <div class="nav-bar">
             <ul>
+              <a href="index.html">
+                  <li>Home</li>
+              </a>
                 <a href="internet.html">
-                    <li>What the Internet Knows</li></a><a href="solutions.html"><li>Solutions</li></a>
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="solutions.html">
+                    <li>Solutions</li>
+                </a>
             </ul>
         </div>
-        <div class="background-img-wrapper">
-            <img src="images/data-bg.png"></img>
+        <div class="header">
+            <div class="content-wrapper header-content">
+                <div class="content">
+
+                    <h1>You might not know it, <br>
+                but your data is being mined for profit.</h1>
+                    <p>Every click, every search and every website you visit generates a small amount of data. While this data might seem insignificant to you, all of your online actions are tracked to create a comprehensive profile of your Internet habits.
+                        The reason that this happens is very simple. The data you create is incredibly valuable to advertisers.</p>
+                </div>
+            </div>
         </div>
-        <div class="content">
-            <h1>You might not know it, <br>
-              but your data is being mined for profit.</h1>
-            <p>Every click, every search and every website you visit generates a small amount of data. While this data might seem insignificant to you, all of your online actions are tracked to create a comprehensive profile of your Internet habits. The
-                reason that this happens is very simple. The data you create is incredibly valuable to advertisers.</p>
+        <div class="content section">
+            <h2>So what does this mean?</h2>
             <p>Frighteningly, your data does not belong to you. You give it away as a result of using most of the popular online services from Facebook to Google and YouTube. In many ways, this data generation is the reason why these services are free. For
                 example Facebook is much more than a social networking site. They make the majority of their profit selling their users’ data to advertisers. The plus side is this means you get more relevant ads and products and services that are tailored
                 for you. However, it also brings up many privacy concerns as well the question of what do we really want the internet to know about us. </p>
-
-                <a href="internet.html"><div class="button">
+                          <img src="images/data-collection.jpg"></img>
+            <a href="internet.html">
+                <div class="button">
                     Find Out More
-                </div></a>
+                </div>
+            </a>
         </div>
 
     </div>
