--- a/advancedwritting/solutions.html
+++ b/advancedwritting/solutions.html
@@ -11,38 +11,54 @@
 <body>
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-              <a href="internet.html">
-                  <li>What the Internet Knows</li></a>
-              <a href="solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
+            <ul>
+                <a href="index.html">
+                    <li>Home</li>
+                </a>
+                <a href="internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="solutions.html">
+                    <li>Solutions</li>
+                </a>
+            </ul>
         </div>
-        <div class="content">
-            <h1>What can you do?</h1>
-            <p>Unfortunately, it is pretty unpractical to just opt out of every service that tracks your data. However, there are some steps you can take to minimize the amount of data that is being collected.</p>
-            <div class="solutions-wrapper">
-                <div class="solution">
-                    <h2>Beginner</h2>
-                    <ul>
-                        <a href="solutions/beginner-1.html"><li>Private Browsing (Safari) or Icognito Mode (Chrome)</li></a>
-                        <a href="solutions/beginner-2.html"><li>Log out of social media when you’re browsing the web</li></a>
-                        <a href="solutions/beginner-3.html"><li>Delete Cookies</li></a>
-                        <a href="solutions/beginner-4.html"><li>Change your smart phones's privacy settings</li></a>
-                    </ul>
-                </div>
-                <div class="solution">
-                    <h2>Intermediate</h2>
-                    <ul>
-                        <a href="solutions/intermediate-1.html"><li>Private Browsing (Safari) or Icognito Mode (Chrome)</li>
-                        <a href="solutions/intermediate-2.html"> <li>DuckDuckGo</li>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>What can you do?</h1>
+                <p>Unfortunately, it is pretty unpractical to just opt out of every service that tracks your data. However, there are some steps you can take to minimize the amount of data that is being collected.</p>
+                <div class="solutions-wrapper">
+                    <div class="solution">
+                        <h2>Beginner</h2>
+                        <ul>
+                            <a href="solutions/beginner-1.html">
+                                <li>Private Browsing (Safari) or Icognito Mode (Chrome)</li>
+                            </a>
+                            <a href="solutions/beginner-2.html">
+                                <li>Log out of social media when you’re browsing the web</li>
+                            </a>
+                            <a href="solutions/beginner-3.html">
+                                <li>Delete Cookies</li>
+                            </a>
+                            <a href="solutions/beginner-4.html">
+                                <li>Change your smart phones's privacy settings</li>
+                            </a>
+                        </ul>
+                    </div>
+                    <div class="solution">
+                        <h2>Intermediate</h2>
+                        <ul>
+                            <a href="solutions/intermediate-1.html">
+                                <li>Private Browsing (Safari) or Icognito Mode (Chrome)</li>
+                                <a href="solutions/intermediate-2.html">
+                                    <li>DuckDuckGo</li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
 </body>
+
 </html>
