--- a/advancedwritting/solutions/beginner-1.html
+++ b/advancedwritting/solutions/beginner-1.html
@@ -13,6 +13,9 @@
     <div class="wrapper">
         <div class="nav-bar">
             <ul>
+              <a href="../index.html">
+                  <li>Home</li>
+              </a>
                 <a href="../internet.html">
                     <li>What the Internet Knows</li>
                 </a>
